kubernetes/kubernetes.yml
apiVersion: v1
kind: Namespace
metadata:
  name: inngest
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: inngest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:latest
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: redis-data
              mountPath: /data
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      volumes:
        - name: redis-data
          persistentVolumeClaim:
            claimName: redis-data-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: inngest
spec:
  selector:
    app: redis
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inngest
  namespace: inngest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inngest
  template:
    metadata:
      labels:
        app: inngest
    spec:
      containers:
        - name: inngest
          image: sathishkannan162/inngest:latest
          volumeMounts:
            - name: inngest-data
              mountPath: /usr/src/app/.inngest
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "4Gi"
              cpu: "1"
      volumes:
        - name: inngest-data
          persistentVolumeClaim:
            claimName: inngest-data-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: inngest-service
  namespace: inngest
spec:
  selector:
    app: inngest
  ports:
    - port: 8288
      targetPort: 8288
  type: ClusterIP
---
# Define an Ingress that routes to our inngest-service.
# Cert Manager will handle TLS certificate provisioning/renewal using Let's Encrypt.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inngest-ingress
  namespace: inngest
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/auth-type: "basic"
    nginx.ingress.kubernetes.io/auth-secret: "basic-auth-secret"
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
spec:
  tls:
    - hosts:
        - inngest.sathishkannan.com
      secretName: inngest-tls
  rules:
    - host: inngest.sathishkannan.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: inngest-service
                port:
                  number: 8288
